--- a/src/components/FilterSection/FilterSection.css
+++ b/src/components/FilterSection/FilterSection.css
@@ -5,8 +5,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    display: block;
-    
 }
 
 /* .filter-bar button {
@@ -20,9 +18,12 @@
 } */
 
 .filter-section {
-    margin-bottom: 3%;
+    margin-bottom: 20px;
 }
 
+.search-panel {
+    border-radius: 30%;
+}
 
 /* buttons start */
 
@@ -40,7 +41,7 @@
 }
 
 .combined-button button:hover {
-    background-color: none;
+    background-color: none ;
 }
 
 .reset-button {
@@ -49,12 +50,12 @@
 }
 
 .apply-button {
-    background-color: #3498db;
+    background-color: #FFC107;
     color: white;
 }
 
 .reset-button:hover {
-    background-color: none;
+    background-color: none ;
 }
 
 
@@ -78,8 +79,7 @@
 
 .checkbox input[type="checkbox"] {
     opacity: 0;
-    margin-right: 8px;
-    /* Adjust spacing between checkbox and label */
+    margin-right: 8px; /* Adjust spacing between checkbox and label */
 }
 
 .checkbox .custom-checkbox {
@@ -92,11 +92,10 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    margin-right: 8px;
-    /* Adjust spacing between checkbox and label */
+    margin-right: 8px; /* Adjust spacing between checkbox and label */
 }
 
-.checkbox input[type="checkbox"]:checked+.custom-checkbox:after {
+.checkbox input[type="checkbox"]:checked + .custom-checkbox:after {
     content: '\2713';
     color: #212121;
     font-size: 12px;
@@ -114,5 +113,26 @@
 
 /* search panel start */
 
+.search-panel {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+    max-width: 300px;
+}
+
+.search-input {
+    flex: 1;
+    border: none;
+    padding: 8px;
+    outline: none;
+}
+
+.search-icon {
+    background-color: #f8f8f8;
+    padding: 8px;
+    cursor: pointer;
+}
 
 /* search panel end */
