--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -4,7 +4,6 @@
   float: left;
   margin: 1% 0px 0% 1%;
   box-sizing: border-box;
-  /* background-color: #fff; */
   box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.2);
   overflow: hidden;
 }
@@ -25,82 +24,65 @@
   }
 }
 
-.image {
-  width: 100%;
-  height: 300px;
-  background-position: 50% 50%;
-  position: relative;
-}
-
-.price {
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translate(-50%);
-  width: 80px;
-  height: 80px;
-  background: rgba(0, 180, 200, 0.95);
-  text-align: center;
-  line-height: 80px;
-  border-radius: 50px;
-  color: #fff;
-}
-
-.details {
-  padding: 40px;
-  text-align: center;
-}
-
-.name {
-  font-weight: 700;
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-.website {
-  color: #777;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.button {
-  display: block;
-  width: 100%;
-  padding: 20px;
-  background: #6FCA36;
-  box-sizing: border-box;
-  margin-top: 30px;
-  border-radius: 3px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 14px;
-  cursor: pointer;
-  position: relative;
+.p-card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 10px;
   overflow: hidden;
-}
+  transition: transform 0.3s ease-in-out;
 
-.button span {
-  transition: all 0.3s ease-out;
-}
+  &:hover {
+    transform: scale(1.05);
+  }
 
-.button::before {
-  font-family: 'fontawesome', sans-serif;
-  transition: all 0.3s ease-out;
-  content: '\f067';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: -100%;
-  line-height: 56px;
-  font-size: 18px;
-}
+  .p-img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    position: static;
+    /* Adjust as needed */
 
-.button:hover::before {
-  top: 0;
-}
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+    }
+  }
 
-.button:hover span {
-  transform: translateY(80px);
-  opacity: 0;
+  .fa-heart:hover {
+    color: red;
+    cursor: pointer;
+  }
+
+  .p-details {
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+
+    h4 {
+      margin-bottom: 5px;
+      font-size: 1.2em;
+    }
+
+    .p-website {
+      color: #3498db;
+      text-decoration: none;
+    }
+
+    .p-button {
+      cursor: pointer;
+      background-color: #2ecc71;
+      color: #fff;
+      padding: 8px 15px;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+
+      &:hover {
+        background-color: #27ae60;
+      }
+    }
+  }
 }
