--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -24,6 +24,31 @@
   }
 }
 
+.notification-bar {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  border-radius: 10px;
+  padding: 1em;
+  background-color: #f44336;
+  /* Red for error */
+  color: white;
+  text-align: center;
+  z-index: 1000;
+  transform: translateY(-100%);
+  /* Start offscreen */
+  transition: transform 0.5s ease-in-out;
+  /* Animate the transform property */
+}
+
+
+.notification-bar.show {
+  transform: translateY(0);
+  /* Move to its original position */
+}
+
+
 .p-card {
   display: flex;
   flex-direction: column;
