--- a/src/components/ProductList/CartComponent.css
+++ b/src/components/ProductList/CartComponent.css
@@ -68,7 +68,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.75);
-
+    z-index: 5;
     backdrop-filter: blur(5px);
     display: block;
 }
@@ -191,7 +191,7 @@
 } */
 
 .total-qty {
-    position: absolute;
+    position: relative;
     height: 1rem;
     width: 1rem;
     background: white;
@@ -396,14 +396,28 @@
     flex-direction: column;
     top: 0;
     right: -100%;
-    z-index: 10;
+    z-index: 6;
     overflow: hidden;
     -webkit-transition: 0.5s;
     transition: 0.5s;
 }
 
 .side-nav-open {
-    right: 0;
+    position: absolute;
+    background: #010101;
+    opacity: 0.95;
+    height: 100%;
+    width: 60%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    top: 0;
+    right: 0px;
+    z-index: 6;
+    overflow: hidden;
+    display: block;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
 }
 
 .side-nav .fa-times {
@@ -430,14 +444,14 @@
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
+}
 
-    .empty-cart {
-        margin: auto 0;
-        font-size: 2rem;
-        font-weight: 900;
-        text-align: center;
-        color: rgba(255, 255, 255, 0.25);
-    }
+.empty-cart {
+    margin: auto 0;
+    font-size: 2rem;
+    font-weight: 900;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.25);
 }
 
 .side-nav .cart-items .cart-item {
