--- a/src/components/LoadingSpinner/LoadingSpinner.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.css
@@ -1,8 +1,20 @@
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7); /* Adjust the background color and opacity as needed */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Ensure it appears over all other components */
+}
+
 .loading-spinner-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
 }
 
 .loading-spinner {
@@ -11,10 +23,10 @@
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    animation: spin 1s linear infinite;
+    animation: rotate 1.5s linear infinite; /* Changed animation name and duration */
 }
 
-@keyframes spin {
+@keyframes rotate {
     0% {
         transform: rotate(0deg);
     }
