--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -58,7 +58,44 @@
 .right-icons {
     display: flex;
     gap: 10px;
-    /* Adjust as needed */
+}
+
+
+.sorting-dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.menu-icon {
+    margin-top: 20px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content div {
+    padding: 12px;
+    cursor: pointer;
+}
+
+.dropdown-content-dark div:hover {
+    background-color: #333;
+}
+
+.dropdown-content-light div:hover {
+    background-color: #f1f1f1;
+}
+
+.sorting-dropdown:hover .dropdown-content {
+    display: block;
 }
 
 @media screen and (max-width: 768px) {
