--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,7 +42,6 @@
 
 .header-section nav ul li a:hover {
     border-bottom: 4px solid #3498db;
-
 }
 
 @media screen and (max-width:1300px) {
@@ -50,6 +49,7 @@
     header nav ul {
         flex-direction: column;
         column-gap: 20px;
+        margin-left: 12%;
     }
 
     header nav ul li {
