--- a/src/components/FilterSection/DualSlider.css
+++ b/src/components/FilterSection/DualSlider.css
@@ -1,9 +1,9 @@
-.container {
+/* .container {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 35px;
-}
+} */
 
 .slider {
   position: relative;
