--- a/src/components/ProductList/CartComponent.css
+++ b/src/components/ProductList/CartComponent.css
@@ -68,7 +68,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.75);
-    z-index: 5;
+    z-index: 50;
     backdrop-filter: blur(5px);
     display: block;
 }
@@ -387,7 +387,6 @@
 
 .side-nav {
     position: fixed;
-    background: #010101;
     opacity: 0.95;
     height: 100%;
     width: 60%;
@@ -396,7 +395,7 @@
     flex-direction: column;
     top: 0;
     right: -100%;
-    z-index: 6;
+    z-index: 60;
     overflow: hidden;
     -webkit-transition: 0.5s;
     transition: 0.5s;
@@ -404,7 +403,6 @@
 
 .side-nav-open {
     position: absolute;
-    background: #010101;
     opacity: 0.95;
     height: 100%;
     width: 60%;
@@ -413,7 +411,7 @@
     flex-direction: column;
     top: 0;
     right: 0px;
-    z-index: 6;
+    z-index: 60;
     overflow: hidden;
     display: block;
     -webkit-transition: 0.5s;
@@ -451,7 +449,6 @@
     font-size: 2rem;
     font-weight: 900;
     text-align: center;
-    color: rgba(255, 255, 255, 0.25);
 }
 
 .side-nav .cart-items .cart-item {
@@ -460,7 +457,6 @@
     -webkit-box-align: center;
     align-items: center;
     justify-content: space-around;
-    border-bottom: 1px solid whitesmoke;
 
     &:hover {
         background: rgba(255, 255, 255, 0.25);
@@ -503,7 +499,6 @@
 .side-nav .final .action .btn {
     font-size: 1.2rem;
     padding: 1rem 2rem;
-    border: 1px solid white;
     margin-right: 20px;
     border-radius: 10px;
 }
@@ -540,8 +535,8 @@
     top: 50%;
     left: 80%;
     transform: translate(0%, -50%);
-    z-index: 5;
-    background: rgba(0, 0, 0, 0.95);
+    z-index: 50;
+    /* background: rgba(0, 0, 0, 0.95); */
     padding: 5% 4%;
     margin: 0 auto;
     left: 0;
